 * fix quote udev rule;
 * journalctl:
    - remove qrencode support;
 * remove systemd-journal-remote program;
 * remove systemd-journal-gatewayd program, service and socket;
 * remove gnutls support;
 * remove microhttpd support;
 * remove journal catalog support;
 * ansi color:
    - change color status messages for jobs in progress state;
    - use light red color instead of highlight red;
 * change ansi color status messages for jobs in progress state;
 * remove gcrypt support;
 * remove python support;
 
   systemd (214.1)
~~~~~~~
        * docs:
             (+) remove gtk-doc build;
             (+) remove sysvinit README;
             (+) remove var-log README;
        * config:
             (+) remove /etc/hostname;
             (+) remove /etc/locale.conf;
             (+) remove /etc/vconsole.conf;
        * data:
             (+) move hwdb to separate module udev;
             (+) move cdrom_id rules file to separate module udev;
             (+) move v4l_id rules file to separate module udev;
             (+) move accelerometer rules file to separate module udev;
             (+) move mtd_probe rules file to separate module udev;
             (+) move kmod rules file to separate module udev;
             (+) move udev rules file to separate module udev;
        * environment:
             (+) remove PREVLEVEL variable;
             (+) remove RUNLEVEL variable;
        * program:
             (+) remove systemd-sysctl program;
             (+) remove systemd-resolved program;
             (+) remove systemd-timesyncd program;
             (+) remove timedatectl and systemd-timedated programs;
             (+) remove hostnamectl and systemd-hostnamed programs;
             (+) remove systemd-networkd and systemd-networkd-wait-online programs;
             (+) remove systemd-nspawn program;
             (+) remove systemd-machined and machinectl programs;
             (+) remove systemd-localed and localectl programs;